--- a/meta.yaml
+++ b/meta.yaml
@@ -18,6 +18,7 @@ requirements:
     - numpy
     - scipy
     - cython
+    - sastool >=0.9.0
 
   run:
     - python
@@ -25,6 +26,7 @@ requirements:
     - scipy
     - matplotlib
     - pyqt >=5
+    - sastool >=0.9.0
 
 about:
   home: https://github.com/awacha/saxsfittool
